# SourrondView360

./: CMakeLists.txt  README.md  avm_app_demo.cpp  readme.md
data/shaders/: basic.frag  basic.vert
src/app/: main.cpp
src/common/: common.cpp  common.h
src/rendering/: mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/scene/: camera.cpp  camera.h  cameracontroller.cpp  cameracontroller.h
src/utils/: model_loader.cpp  model_loader.h  texture_utils.cpp  texture_utils.h
